Fixed background visibility

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 body {
-    background-image: url("/src/assets/images/wallram.jpg");
-    background-size: cover;
-    @media only screen and (max-width: 500px) {
-        background-image: url("/src/assets/images/wallphone.webp");
-        background-position: center;
-        background-size: 100% auto;
-        background-attachment: fixed;
-    }
+  background-image: url("/src/assets/images/wallram.jpg");
+  background-attachment: fixed;
+  background-size: cover;
+
+  @media only screen and (max-width: 500px) {
+    background-image: url("/src/assets/images/wallphone.webp");
+    background-position: center;
+    background-size: 100% auto;
+    background-attachment: fixed;
   }
-  
+}
